fix style in module 06

--- a/Modulo-06/01/index.html
+++ b/Modulo-06/01/index.html
@@ -1,12 +1,18 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>Test</title>
-    <link rel="stylesheet" type="text/css" href="http://nodejs-workshop-arg.github.com/stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="http://workshopba.jit.su/css/main.css">
 </head>
 <body>
     <div class="container">
-        <h1>Hola!</h1>
-        <img src="http://gifsoup.com/imager.php?id=2366792&t=o" border="0"/>
+        <header>
+        	<h1>Hola!</h1>
+    	</header>
+    	<div class="section">
+        	<h2>el salto del gato</h2>
+        	<img style="width: 650px;" src="http://gifsoup.com/imager.php?id=2366792&t=o" border="0"/>
+    	</div>
     </div>
 </body>
 </html>
