--- a/Modulo-01/02/index.html
+++ b/Modulo-01/02/index.html
@@ -1,10 +1,20 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<title>HANDS ON LABS!</title>
+    <title>Test</title>
+    <link rel="stylesheet" type="text/css" href="http://workshopba.jit.su/css/main.css">
 </head>
 <body>
-	<h1>bienvenidos!</h1>
-	<img src="http://gifsoup.com/imager.php?id=859764&t=o" border="0"/>
-
+    <div class="container">
+        <header>
+            <h1>Hola mundo!</h1>
+        </header>
+        <div class="section">
+            <h2>FIESTA NODE!</h2>
+            <p>El hola mundo mas fiestero, para vos.</p>
+            <img style="width: 730px; padding-left: 100px;" 
+                src="http://gifsoup.com/imager.php?id=859764&t=o" border="0"/>
+        </div>
+    </div>
 </body>
 </html>
