improvements to modulo-01

--- a/Modulo-01/02/index.html
+++ b/Modulo-01/02/index.html
@@ -12,7 +12,7 @@
         <div class="section">
             <h2>FIESTA NODE!</h2>
             <p>El hola mundo mas fiestero, para vos.</p>
-            <img style="width: 730px; padding-left: 100px;" 
+            <img style="width: 730px; text-align:center; display: block; margin: auto;" 
                 src="http://gifsoup.com/imager.php?id=859764&t=o" border="0"/>
         </div>
     </div>
