--- a/Modulo-01/04/public/index.html
+++ b/Modulo-01/04/public/index.html
@@ -1,9 +1,22 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<title>HANDS ON LABS!</title>
+    <title>home</title>
+    <link rel="stylesheet" type="text/css" href="http://workshopba.jit.su/css/main.css">
 </head>
 <body>
-	<h1>bienvenidos!</h1>
-	<img src="http://gifsoup.com/imager.php?id=859764&t=o" border="0"/>
+    <div class="container">
+        <header>
+            <h1>Hola mundo!</h1>
+        </header>
+        <div class="section">
+            <h2>FIESTA NODE!</h2>
+            <p>El hola mundo mas fiestero, para vos.</p>
+            <img style="width: 730px; text-align:center; display: block; margin: auto;" 
+                src="http://gifsoup.com/imager.php?id=859764&t=o" border="0"/>
+            <br>
+            <a href="/about.html">acerca de nosotros</a>
+        </div>
+    </div>
 </body>
 </html>
